--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "square": "^21.0.0", // Check for the latest version
+    "square": "^21.0.0",
     "express": "^4.17.1",
     "cors": "^2.8.5"
   },
   "engines": {
-    "node": "16.x"  // Specify a supported Node.js version
+    "node": "16.x"
   }
 }
